--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -30,7 +30,7 @@
             <h3>Vos figures</h3>
 
             <p class="mt-4 mb-4">
-                <a class="btn btn-primary" href="{{ path('app_figure_new') }}">Ajouter une figure</a>
+                <a class="btn btn-form" href="{{ path('app_figure_new') }}">Ajouter une figure</a>
             </p>
          
             {% for figure in figures %}
