--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,64 +5,92 @@
 {% block body %}
 
 <!-- hero -->
-<div class="bg-image d-flex justify-content-center align-items-center"
+<div class="hero bg-image d-flex justify-content-center align-items-center"
   style="
     background-image: url('{{ asset('media/images/hero.jpg') }}');
     height: 100vh;
     background-size: cover;">
-    <div class="mask p-5" style="background-color: rgba(0, 0, 0, 0.1);">
-        <h1 class="mb-3 text-white text-center">SnowTricks</h1>
-        <h4 class="mb-3 text-white text-center">Site collaboratif pour apprendre des figures (tricks)</h4>
+    <div>
+        <h1 class="mb-4 text-white text-center">SnowTricks</h1>
+        <h4 class="text-white text-center">Site collaboratif pour apprendre des figures (tricks)</h4>
     </div>
 </div>
 <!-- hero -->
 
 <div class="container pt-4">
 
-{% for flash_message in app.flashes('success') %}
-    <div class="alert alert-success" role="alert">{{ flash_message }}</div>
-{% endfor %}
-
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-
-{% for figure in figures %}
-
-{% if figure.image %}
-{% set thumb = asset('uploads/images/' ~ figure.image.url) | imagine_filter('figure_thumb') %}
-{% else %}
-{% set thumb = asset('media/images/default.jpg') | imagine_filter('figure_thumb') %}
-{% endif %}
-
-<div class="col mb-3 d-flex align-items-stretch">
-    <div class="card rounded-0">
-        <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
-        
-        <img class="img-fluid" src="{{ thumb }}" alt="{{ figure.name }}" /></a>
-      
-        <div class="card-body p-2">
-            <div class="row row-cols-3 align-items-center justify-content-start">
-                <div class="col-9 col-sm-8">
-                    <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
-                    <h6 class="card-title">{{ figure.name | u.truncate(20) }}</h6>
-                    </a>
-                </div>
-                {% if is_granted("POST_EDIT", figure) %}
-                <div class="col-1">
-                    <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                    <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-                    </svg>
-                    </a>
-                </div>
-                <div class="col-1">
-                    {{ include('figure/_delete_form.html.twig') }}
-                </div>
-                {% endif %}
-            </div>
+    {% for flash_message in app.flashes('success') %}
+        <div class="alert alert-success" role="alert">
+            {{ flash_message }}
         </div>
+    {% endfor %}
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+        {% for figure in figures %}
+            {% if figure.image %}
+                {% set thumb = asset('uploads/images/' ~ figure.image.url) | imagine_filter('figure_thumb') %}
+            {% else %}
+                {% set thumb = asset('media/images/default.jpg') | imagine_filter('figure_thumb') %}
+            {% endif %}
+            <div class="load-more-item mb-4">
+                <div class="col d-flex align-items-stretch h-100">
+                    <div class="card rounded-0 w-100 shadow">
+                        <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
+                        <img class="img-fluid w-100" src="{{ thumb }}" alt="{{ figure.name }}" /></a>
+      
+                        <div class="card-body px-2 py-2">
+                            <div class="row row-cols-3 align-items-center justify-content-evenly">
+                                
+                                {% if is_granted("POST_EDIT", figure) %}
+                                    <div class="col-8 col-sm-9">
+                                {% else %}
+                                    <div class="col-12">
+                                {% endif %}
+
+                                    <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
+                                    <h6 class="card-title">{{ figure.name }}</h6>
+                                   </a>
+                                </div>
+            
+                                {% if is_granted("POST_EDIT", figure) %}
+                                    <div class="col-1 d-flex justify-content-center">
+                                        <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">
+                                        <i class="bi-pencil-fill"></i>
+                                        </a>
+                                    </div>
+                        
+                                    <div class="col-1 d-flex justify-content-center">
+                                        {{ include('figure/_delete_form.html.twig') }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
+
+    <div class="text-center">
+        <button class="btn btn-form load-more">
+            <i class="bi bi-plus-circle-dotted"></i> voir plus
+        </button>
+    </div>
+
+    <script>
+        $(document).ready (function () {
+        $(".load-more-item").slice(0, 5).show();
+        $(".load-more").on("click", function(e){
+            e.preventDefault();
+            $(".load-more-item:hidden").slice(0, 5).slideDown();
+            if ($(".load-more-item:hidden").length == 0) {
+                $(".load-more").addClass("d-none");
+            }
+        });
+        })
+</script>
+
+
 </div>
-{% endfor %}
-</div>
-</div>
+
 {% endblock %}
