--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
+<nav class="navbar d-none d-sm-block navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid fw-bold">
     <a class="navbar-brand" href="{{ path('app_home') }}">SnowTricks</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto fw-bold">
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_home') }}">Home
+          <a class="nav-link" href="{{ path('app_home') }}">Accueil
           </a>
         </li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') == false %}
