--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -79,7 +79,7 @@
         {{ figure.description | nl2br }}</td>
     </p>
     
-    <div class="tag trick-footer trick-info mt-5 pb-5 row row-cols-5 justify-content-center h-100 align-items-stretch">
+    <div class="tag trick-footer trick-info mt-5 pb-5 row justify-content-between h-100 align-items-stretch">
         <div class="col ms-2 bg-white shadow text-center">
             Postée le 
             <br />
