--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
     background-size: cover;">
     <div>
         <h1 class="mb-4 text-white text-center">SnowTricks</h1>
-        <h4 class="text-white text-center">Site collaboratif pour apprendre des figures (tricks)</h4>
+        <h5 class="text-white text-center">Site collaboratif pour apprendre des figures</h5>
     </div>
 </div>
 <!-- hero -->
