--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 
     <h1 class="container mt-4 text-center">Inscription utilisateur</h1>
 
-    <div class="container mt-4 form-container">
+    <div class="mt-4 form-container">
         {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.name, {'label': 'Votre nom'}) }}
             {{ form_row(registrationForm.email) }}
