--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -50,7 +50,7 @@
                         <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
                         {{ figure.name }}</a>
                         <br />
-                        {{ figure.description | u.truncate(130) }}
+                        {{ figure.description | u.truncate(130) }}[...]
                     </p>
                     <p class="text-end">
                         <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">Modifier</a>
