--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -12,7 +12,7 @@
     </div>
     
     <p class="mt-4 text-center">
-    <a href="{{ path('app_figure_index') }}">Retour à la liste</a>
+    <a href="{{ path('app_user_dashboard') }}">Retour à la liste</a>
     </p>
 </div>
 {% endblock %}
