--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -111,6 +111,10 @@
             </div>
         </div>
 
+    <div id="medias-btn-hide" class="container">
+        <button class="d-block d-sm-none btn btn-form" onclick="hideMedias()">Cacher les médias</button>
+    </div>
+
         {# formulaire #}
         <div class="container mt-4">
             {% set btn = true %}
