--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -73,6 +73,10 @@
     </div>
 </div>
 
+<div id="medias-btn-hide" class="container">
+    <button class="d-block d-sm-none btn btn-form" onclick="hideMedias()">Cacher les médias</button>
+</div>
+
 {# description #}
 <div class="container mt-4 ps-2 pe-2 ps-md-5 pe-md-5">
     <p class="ps-2 pe-2 ps-md-5 pe-md-5">
