--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Page introuvable{% endblock %}
+
 {% block body %}
     <div class="container mt-4">
         <h1>Erreur</h1>
